--- a/public/chat.html
+++ b/public/chat.html
@@ -75,8 +75,8 @@
       <div class="brand">
         <div class="logo"></div>
         <div>
-          <div class="title">Curevia Assistant</div>
-          <div class="subtitle">Snabb hjälp • Demo när du vill</div>
+          <div class="title" id="ui-title">Curevia Assistant</div>
+          <div class="subtitle" id="ui-subtitle">Snabb hjälp • Demo när du vill</div>
         </div>
       </div>
       <button id="theme" class="toggle" type="button">🌗 Mörkt läge</button>
@@ -98,18 +98,18 @@
   <!-- Contact Modal -->
   <div id="backdrop" class="modal-back" role="dialog" aria-modal="true">
     <div class="modal">
-      <div class="head">Lämna dina uppgifter</div>
+      <div class="head" id="ui-modal-title">Lämna dina uppgifter</div>
       <div class="body">
         <div class="field">
-          <label for="name">Namn</label>
+          <label for="name" id="ui-name-label">Namn</label>
           <input id="name" placeholder="För- och efternamn" />
         </div>
         <div class="field">
-          <label for="email">E-post</label>
+          <label for="email" id="ui-email-label">E-post</label>
           <input id="email" placeholder="namn@exempel.se" />
         </div>
         <div class="field">
-          <label for="msg">Meddelande (valfritt)</label>
+          <label for="msg" id="ui-msg-label">Meddelande (valfritt)</label>
           <textarea id="msg" rows="3" placeholder="Kort rad om vad du vill prata om"></textarea>
         </div>
       </div>
@@ -122,52 +122,116 @@
 
 <script>
 document.addEventListener("DOMContentLoaded", () => {
-  const API = "/api/curevia-chat";
-  const log = document.getElementById("log");
-  const chipsEl = document.getElementById("chips");
-  const inp = document.getElementById("inp");
-  const btn = document.getElementById("btn");
-  const footnote = document.getElementById("footnote");
-  const themeBtn = document.getElementById("theme");
-  const sessionId = self.crypto?.randomUUID?.() || ("sess-" + Date.now());
+  // ---------- Language detection (sv / no / en)
+  function detectLang(){
+    const tz = Intl.DateTimeFormat().resolvedOptions().timeZone || "";
+    const nlang = (navigator.languages && navigator.languages[0]) || navigator.language || "";
+    const low = (nlang || "").toLowerCase();
 
-  // ---- Theme init & toggle
+    if (tz.includes("Stockholm") || low.startsWith("sv")) return "sv";
+    if (tz.includes("Oslo")      || low.startsWith("no") || low.startsWith("nb") || low.startsWith("nn")) return "no";
+    return "en";
+  }
+  const LANG = detectLang();
+
+  // Simple i18n map (UI only)
+  const I18N = {
+    sv: {
+      title:"Curevia Assistant", subtitle:"Snabb hjälp • Demo när du vill",
+      placeholder:"Ställ en fråga…", send:"Skicka",
+      dark_on:"🌗 Mörkt läge", dark_off:"☀️ Ljust läge",
+      hello:"Hej! 👋 Jag är Curevia-boten – hur kan jag hjälpa till idag?",
+      foot:"Botten använder Curevias källor för att svara korrekt.",
+      modal_title:"Lämna dina uppgifter", name:"Namn", email:"E-post",
+      msg:"Meddelande (valfritt)", cancel:"Avbryt", submit:"Skicka",
+      error_server:"Jag nådde inte servern just nu – prova igen om en stund 🙏",
+      error_tech:"Tekniskt fel – prova igen.", copied:"Kopierat ✓", copy:"Kopiera", fail:"Fel"
+    },
+    no: {
+      title:"Curevia-assistenten", subtitle:"Rask hjelp • Demo når du vil",
+      placeholder:"Still et spørsmål…", send:"Send",
+      dark_on:"🌗 Mørk modus", dark_off:"☀️ Lys modus",
+      hello:"Hei! 👋 Jeg er Curevia-boten – hvordan kan jeg hjelpe deg i dag?",
+      foot:"Botten bruker Curevias kilder for å svare korrekt.",
+      modal_title:"Legg igjen kontaktinfo", name:"Navn", email:"E-post",
+      msg:"Melding (valgfritt)", cancel:"Avbryt", submit:"Send",
+      error_server:"Jeg fikk ikke kontakt med serveren – prøv igjen senere 🙏",
+      error_tech:"Teknisk feil – prøv igjen.", copied:"Kopiert ✓", copy:"Kopier", fail:"Feil"
+    },
+    en: {
+      title:"Curevia Assistant", subtitle:"Quick help • Demo anytime",
+      placeholder:"Ask a question…", send:"Send",
+      dark_on:"🌗 Dark mode", dark_off:"☀️ Light mode",
+      hello:"Hi! 👋 I’m the Curevia assistant — how can I help today?",
+      foot:"The assistant uses Curevia sources for accurate answers.",
+      modal_title:"Leave your details", name:"Name", email:"Email",
+      msg:"Message (optional)", cancel:"Cancel", submit:"Send",
+      error_server:"I couldn’t reach the server — please try again 🙏",
+      error_tech:"Technical error — please try again.", copied:"Copied ✓", copy:"Copy", fail:"Error"
+    }
+  }[LANG];
+
+  // Apply UI text
+  document.documentElement.lang = LANG;
+  const $ = (id)=>document.getElementById(id);
+  $("ui-title").textContent = I18N.title;
+  $("ui-subtitle").textContent = I18N.subtitle;
+  $("inp").placeholder = I18N.placeholder;
+  $("btn").textContent = I18N.send;
+  $("footnote").textContent = I18N.foot;
+  $("ui-modal-title").textContent = I18N.modal_title;
+  $("ui-name-label").textContent = I18N.name;
+  $("ui-email-label").textContent = I18N.email;
+  $("ui-msg-label").textContent = I18N.msg;
+
+  // ---------- Theme init & toggle
+  const themeBtn = $("theme");
   const savedTheme = localStorage.getItem("cv_theme");
   if (savedTheme === "dark") document.documentElement.classList.add("dark");
-  themeBtn.textContent = document.documentElement.classList.contains("dark") ? "☀️ Ljust läge" : "🌗 Mörkt läge";
+  themeBtn.textContent = document.documentElement.classList.contains("dark") ? I18N.dark_off : I18N.dark_on;
   themeBtn.addEventListener("click", () => {
     document.documentElement.classList.toggle("dark");
     const isDark = document.documentElement.classList.contains("dark");
     localStorage.setItem("cv_theme", isDark ? "dark" : "light");
-    themeBtn.textContent = isDark ? "☀️ Ljust läge" : "🌗 Mörkt läge";
+    themeBtn.textContent = isDark ? I18N.dark_off : I18N.dark_on;
   });
 
-  // ---- Modal refs
-  const backdrop = document.getElementById("backdrop");
-  const fName = document.getElementById("name");
-  const fEmail = document.getElementById("email");
-  const fMsg = document.getElementById("msg");
-  document.getElementById("cancel").onclick = ()=> toggleModal(false);
-  document.getElementById("send").onclick = submitContact;
+  // ---------- DOM refs
+  const API = "/api/curevia-chat";
+  const log = $("log");
+  const chipsEl = $("chips");
+  const inp = $("inp");
+  const btn = $("btn");
+  const footnote = $("footnote");
+  const sessionId = self.crypto?.randomUUID?.() || ("sess-" + Date.now());
 
+  // ---------- Modal refs
+  const backdrop = $("backdrop");
+  const fName = $("name");
+  const fEmail = $("email");
+  const fMsg = $("msg");
+  $("cancel").onclick = ()=> toggleModal(false);
+  $("send").textContent = I18N.submit;
+  $("cancel").textContent = I18N.cancel;
+  $("send").onclick = submitContact;
   function toggleModal(open){ backdrop.style.display = open ? "flex" : "none"; }
 
   function attachCopyButton(div){
     const cbtn = document.createElement("button");
     cbtn.className = "copy";
     cbtn.type = "button";
-    cbtn.textContent = "Kopiera";
-    cbtn.title = "Kopiera svar";
+    cbtn.textContent = I18N.copy;
+    cbtn.title = I18N.copy;
     cbtn.onclick = async (e)=>{
       e.stopPropagation();
       try{
         const text = div.childNodes[0]?.nodeValue || div.innerText;
         await navigator.clipboard.writeText(text.trim());
-        cbtn.classList.remove("err"); cbtn.classList.add("ok"); cbtn.textContent = "Kopierat ✓";
-        setTimeout(()=>{ cbtn.classList.remove("ok"); cbtn.textContent = "Kopiera"; }, 1500);
+        cbtn.classList.remove("err"); cbtn.classList.add("ok"); cbtn.textContent = I18N.copied;
+        setTimeout(()=>{ cbtn.classList.remove("ok"); cbtn.textContent = I18N.copy; }, 1500);
       }catch{
-        cbtn.classList.remove("ok"); cbtn.classList.add("err"); cbtn.textContent = "Fel";
-        setTimeout(()=>{ cbtn.classList.remove("err"); cbtn.textContent = "Kopiera"; }, 1500);
+        cbtn.classList.remove("ok"); cbtn.classList.add("err"); cbtn.textContent = I18N.fail;
+        setTimeout(()=>{ cbtn.classList.remove("err"); cbtn.textContent = I18N.copy; }, 1500);
       }
     };
     div.appendChild(cbtn);
@@ -208,9 +272,9 @@ document.addEventListener("DOMContentLoaded", () => {
 
   async function meta(){
     try{
-      const r = await fetch(API, { headers: { "X-Session-Id": sessionId }});
+      const r = await fetch(API, { headers: { "X-Session-Id": sessionId, "X-Lang": LANG }});
       const m = await r.json();
-      addBubble("Hej! 👋 Jag är Curevia-boten – hur kan jag hjälpa till idag?");
+      addBubble(I18N.hello);
       (m.suggested||[]).forEach(c => {
         const el = document.createElement("span");
         el.className = "chip";
@@ -219,11 +283,11 @@ document.addEventListener("DOMContentLoaded", () => {
         chipsEl.appendChild(el);
       });
     }catch{
-      addBubble("Jag nådde inte servern just nu – prova igen om en stund 🙏");
+      addBubble(I18N.error_server);
     }
   }
 
-  // ---- Skicka med SSE + fallback
+  // ---------- Skicka (SSE + fallback) med språkheader
   async function send(text){
     if (!text?.trim()) return;
     addBubble(text, "me");
@@ -233,7 +297,7 @@ document.addEventListener("DOMContentLoaded", () => {
     const typing = typingBubble();
     let gotAnyToken = false;
 
-    btn.disabled = true; btn.textContent = "Skickar…";
+    btn.disabled = true; btn.textContent = I18N.send + "…";
 
     try{
       const r = await fetch(API + "?stream=1", {
@@ -241,6 +305,7 @@ document.addEventListener("DOMContentLoaded", () => {
         headers: {
           "Content-Type":"application/json",
           "X-Session-Id": sessionId,
+          "X-Lang": LANG,
           "Accept":"text/event-stream"
         },
         body: JSON.stringify({ message: text })
@@ -251,7 +316,7 @@ document.addEventListener("DOMContentLoaded", () => {
       if (!ct.includes("text/event-stream")) {
         const data = await r.json();
         typing.destroy();
-        bubble.textContent = data.reply || "Oj, något gick fel.";
+        bubble.textContent = data.reply || I18N.error_tech;
         if (data.citations?.length) {
           data.citations.forEach(c=>{
             const a = document.createElement("a");
@@ -263,7 +328,7 @@ document.addEventListener("DOMContentLoaded", () => {
         }
         if (data.action === "open_url" && data.url) window.open(data.url, "_blank", "noopener,noreferrer");
         if (data.action === "open_contact_form") toggleModal(true);
-        btn.disabled = false; btn.textContent = "Skicka";
+        btn.disabled = false; btn.textContent = I18N.send;
         return;
       }
 
@@ -286,13 +351,18 @@ document.addEventListener("DOMContentLoaded", () => {
           let event = "message", data = "";
           for (const line of lines) {
             if (line.startsWith("event:")) event = line.slice(6).trim();
-            else if (line.startsWith("data:")) data += line.slice(5).trim();
+            else if (line.startsWith("data:")) {
+              // Behåll mellanslag i token-data (tidigare trim förstörde spacing)
+              let payload = line.slice(5);
+              if (payload.startsWith(" ")) payload = payload.slice(1); // ta bara bort ett enkelt mellanrum efter kolon
+              data += payload;
+            }
           }
           if (!data) continue;
 
           if (event === "token") {
             if (!gotAnyToken) { typing.destroy(); gotAnyToken = true; }
-            bubble.innerText += data;  // behåller mellanslag/radbrytningar
+            bubble.innerText += data;
             log.scrollTo({ top: log.scrollHeight });
           }
           else if (event === "action") {
@@ -320,15 +390,15 @@ document.addEventListener("DOMContentLoaded", () => {
           }
           else if (event === "error") {
             typing.destroy();
-            bubble.textContent = "Tekniskt fel – prova igen.";
+            bubble.textContent = I18N.error_tech;
           }
         }
       }
     }catch(err){
       typing.destroy();
-      bubble.textContent = "Tekniskt fel – prova igen.";
+      bubble.textContent = I18N.error_tech;
     } finally {
-      btn.disabled = false; btn.textContent = "Skicka";
+      btn.disabled = false; btn.textContent = I18N.send;
     }
   }
 
@@ -336,28 +406,30 @@ document.addEventListener("DOMContentLoaded", () => {
     const name = fName.value.trim();
     const email = fEmail.value.trim();
     const message = fMsg.value.trim();
-    if (!name || !email) { alert("Fyll i namn och e-post"); return; }
+    if (!name || !email) { alert(I18N.error_tech); return; }
     try{
       const r = await fetch(API, {
         method: "POST",
-        headers: { "Content-Type":"application/json", "X-Session-Id": sessionId },
+        headers: { "Content-Type":"application/json", "X-Session-Id": sessionId, "X-Lang": LANG },
         body: JSON.stringify({ contact: { name, email, message} })
       });
       if (r.ok){
         toggleModal(false);
-        addBubble("Tack! Vi hör av oss inom kort 💙");
+        addBubble(LANG==="sv" ? "Tack! Vi hör av oss inom kort 💙" :
+                 LANG==="no" ? "Takk! Vi tar kontakt snart 💙" :
+                               "Thanks! We’ll get back to you shortly 💙");
         fName.value = ""; fEmail.value = ""; fMsg.value = "";
       } else {
-        addBubble("Kunde inte skicka just nu – maila oss gärna så löser vi det.", "bot");
+        addBubble(I18N.error_tech, "bot");
       }
     }catch{
-      addBubble("Kunde inte skicka just nu – prova igen senare.", "bot");
+      addBubble(I18N.error_tech, "bot");
     }
   }
 
   // Bindningar
-  btn.addEventListener("click", () => send(inp.value));
-  inp.addEventListener("keydown", (e) => { if (e.key === "Enter") send(inp.value); });
+  $("btn").addEventListener("click", () => send($("inp").value));
+  $("inp").addEventListener("keydown", (e) => { if (e.key === "Enter") send(e.target.value); });
 
   // Start
   meta();
